# src/shared/generated/swagger.json
@@ -1112,6 +1112,14 @@
 							"format": "double",
 							"type": "number"
 						}
+					},
+					{
+						"in": "query",
+						"name": "filter",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
 			},
